# Mux-Engine

./: CMakeLists.txt  ME1.sln  README.md
docs/: estructura_motor.md  ideas.md
include/: Define_Global.h  MuxEngine.h
include/Graphics/: Canvas2DPanel.h  RTXLoader.h  SceneManager.h  SplashScene.h  rtx_to_bitmap.h
include/UI/: DockGroup.h  DockManager.h  MainTabBar.h  Panel.h
src/: ME1.APS  ME1.rc  ME1.vcxproj  ME1.vcxproj.filters  resource.h
src/Core/: ME_Main.cpp
src/Debug/: vc143.idb
src/Debug/ME1.tlog/: ME1.lastbuildstate
src/Graphics/: Canvas2DPanel.cpp  RTXLoader.cpp  SceneManager.cpp  SplashScene.cpp  rtx_to_bitmap.cpp
src/UI/Editor/: DockGroup.cpp  DockManager.cpp  MainTabBar.cpp  Panel.cpp
src/x64/Debug/: ME1.res  ME1Editor.exe.recipe  ME1Editor.ilk  vc143.idb
src/x64/Debug/ME1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ME1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
